# waifu-diffuser

./: .gitignore  Cargo.toml
.cargo/: config.toml
.github/workflows/: rust.yml
projects/diffusers-pack/: Cargo.toml
projects/diffusers-pack/src/tasks/: mod.rs
projects/unity-diffuser/: Cargo.toml
projects/unity-diffuser/src/: lib.rs
projects/unity-diffuser/src/models/: mod.rs
projects/unity-diffuser/src/tasks/: mod.rs
projects/unity-diffuser/tests/: main.rs
projects/waifu-diffuser-reduce/: Cargo.toml
projects/waifu-diffuser-reduce/src/: main.rs
projects/waifu-diffuser-server/: Cargo.toml  Readme.md
projects/waifu-diffuser-server/src/: lib.rs  main.rs
projects/waifu-diffuser-server/src/models/: mod.rs
projects/waifu-diffuser-server/src/models/text2image/: mod.rs
projects/waifu-diffuser-server/src/session/: mod.rs
projects/waifu-diffuser-server/src/session/context/: mod.rs
projects/waifu-diffuser-server/src/session/sender/: mod.rs
projects/waifu-diffuser-server/src/session/server/: mod.rs  recv.rs  send.rs  text2image.rs
projects/waifu-diffuser-server/src/utils/: mod.rs
projects/waifu-diffuser-types/: Cargo.toml
projects/waifu-diffuser-types/src/: lib.rs
projects/waifu-diffuser-types/src/errors/: for_7z.rs  for_anyhow.rs  for_image.rs  for_serde_json.rs  for_tungstenite.rs  io_error.rs  mod.rs
projects/waifu-diffuser-types/src/models/: clip.rs  deep_dan_booru.rs  mod.rs  reader.rs  unet.rs  vae.rs
projects/waifu-diffuser-types/src/models/model_path/: der.rs  mod.rs
projects/waifu-diffuser-types/src/models/scheduler/: mod.rs
projects/waifu-diffuser-types/src/models/unet/: der.rs  mod.rs
projects/waifu-diffuser-types/src/schedulers/: der.rs  mod.rs
projects/waifu-diffuser-types/src/schedulers/ddim/: mod.rs
projects/waifu-diffuser-types/src/tasks/: mod.rs  secrets.rs  short_action.rs  unique.rs
projects/waifu-diffuser-types/src/tasks/collect_log/: mod.rs
projects/waifu-diffuser-types/src/tasks/text2image/: der.rs  mod.rs
projects/waifu-diffuser-types/tests/: main.rs
projects/waifu-diffuser-types/tests/unet/: anything-v4.5-fp16.json  mod.rs  task.json
