[package]
name = "unity-diffuser"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/oovm/sub_projects"
documentation = "https://docs.rs/sub_projects"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
diffusers = "0.2.1"
sevenz-rust = "0.2.0"

[dev-dependencies]

[features]
default = []
