[package]
name = "unity-diffuser"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/oovm/sub_projects"
documentation = "https://docs.rs/sub_projects"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.156", features = ["derive"] }

[dependencies.pyke-diffusers]
git = "https://github.com/pykeio/diffusers.git"
#version = "0.2.0"
features = ["common-schedulers", "stable-diffusion", "ort-tensorrt"]
default-features = false

[dev-dependencies]

[features]
default = []
