[package]
name = "waifu-diffuser"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/oovm/waifu-diffuser"
documentation = "https://docs.rs/waifu-diffuser-types"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
pyke-diffusers = "0.2.0"
safetensors = "0.3.0"
tokio-tungstenite = "0.18.0"
tokio = { version = "1.26.0", features = ["full"] }
tungstenite = "0.18.0"
futures-util = "0.3.17"
log = "0.4.17"
env_logger = "0.10.0"
clap = "4.1.8"
anyhow = "1.0.69"
image = "0.24.5"

[dev-dependencies]

[features]
default = []
