[package]
name = "waifu-diffuser"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/oovm/waifu-diffuser"
documentation = "https://docs.rs/waifu-diffuser-types"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
tokio-tungstenite = "0.18.0"
tokio = { version = "1.26.0", features = ["full"] }
tungstenite = "0.18.0"
futures-util = "0.3.27"
clap = "4.1.8"
anyhow = "1.0.69"
image = "0.24.5"
serde_json = "1.0.94"
bincode = "2.0.0-rc.2"
task-system = { version = "0.1.0", features = ["tokio"] }
dashmap = "5.4.0"

#[dependencies.ort]
#git = "https://github.com/pykeio/ort.git"
#rev = "1afd392"
#default-features = false

[dependencies.pyke-diffusers]
git = "https://github.com/pykeio/diffusers.git"
#version = "0.2.0"
features = ["common-schedulers", "stable-diffusion", "ort-tensorrt"]
default-features = false

[dependencies.waifu-diffuser-types]
path = "../waifu-diffuser-types"
features = ["anyhow", "tungstenite"]

[dev-dependencies]

[features]
default = []
