[package]
name = "waifu-diffuser-types"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "Types definitions for waifu-diffuser"
repository = "https://github.com/oovm/waifu-diffuser"
documentation = "https://docs.rs/waifu-diffuser-types"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
uuid = { version = "1.3.0", features = ["serde", "v4", "v7"] }
serde = { version = "1.0.156", features = ["derive"] }
serde_json = "1.0.94"
walkdir = "2.3.2"
diffuser-scheduler = "0.0.0"
image = "0.24.5"
semver = { version = "1.0.17", features = ["serde"] }
url = { version = "2.3.1", features = ["serde"] }
anyhow = { version = "1.0.69", optional = true }
tungstenite = { version = "0.18.0", optional = true }
package-key = "0.2.0"

[dependencies.resource-path]
version = "0.1.0"
features = ["serde", "trauma"]

[dependencies.diagnostic-quick]
version = "0.4.0"
features = ["walkdir", "json5"]

[dev-dependencies]

[features]
default = []
